--- a/themes/sgsc/sass/_about-our-team.scss
+++ b/themes/sgsc/sass/_about-our-team.scss
@@ -19,7 +19,6 @@
 }
 
 .entry-title {
-    margin: 0;
     position: absolute;
     bottom: 0px;
     display: flex;
@@ -28,6 +27,7 @@
     width: 100%;
     height: 118px;
     background: $orange;
+    margin-bottom: 0;
   }
 
 .entry-content p {
@@ -55,9 +55,66 @@
   }
 }
 
-.about-links p:hover {
-    border: 4px solid $black;
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  list-style-type: none;
+}
+    margin: 0;
+
+ul li:nth-child(odd) img {
+  padding-left: 22px;
+  background-color: $blue;
+}
+
+ul li:nth-child(even) img {
+  padding-right: 22px;
+  background-color: $blue;
+}
+
+.member-container {
+  margin: 0 22px;
+}
+
+span.text {
+    color: rgba(92,142,220,1);
+}
+
+.member-email, .member-bio, .member-container {
+  margin-bottom: 20px;
+}
+
+  .about-back-btn {
+    p {
+      border: solid 2px black;
+      width: 6rem;
+      height: 2rem;
+      margin-left: 1rem;
+      align-items: center;
+      display: flex;
+      justify-content: center;
+      font-family: $font__header;
+      font-size: 1.1rem;
+      &:hover {
+        background-color: $orange;
+        border-color: $orange;
+      }
+    }
+    a {
+      color: black;
+      text-decoration: none;
+      &:visited {
+        color: black;
+      }
+      &:hover {
+        color: white;
+      }
+    }
   }
+
 
 @media all and (min-width: 480px) {
 
