--- a/themes/sgsc/sass/_about-our-team.scss
+++ b/themes/sgsc/sass/_about-our-team.scss
@@ -83,8 +83,16 @@ span.text {
     color: rgba(92,142,220,1);
 }
 
-.member-email, .member-bio, .member-container {
+ .cfs-hyperlink {
+    text-decoration: none;
+  }
+
+.member-email, .member-bio {
   margin-bottom: 20px;
+}
+
+.member-picture {
+  width: 100%;
 }
 
   .about-back-btn {
@@ -132,24 +140,24 @@ span.text {
 //   text-decoration: none;
 // }
 
-.about-links p {
-  background: $orange;
-  width: 417px;
-  height: 150px;
-  border: 4px solid $orange;
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 63px 0 0 0;
-  &:nth-child(even) {
-    margin-left: 63px;
-    margin-right: 31.5px;
-  }
-  &:nth-child(odd) {
-    margin-right: 63px;
-    margin-left: 31.5px;
-  }
-}
+// .about-links p {
+//   background: $orange;
+//   width: 417px;
+//   height: 150px;
+//   border: 4px solid $orange;
+//   text-align: center;
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   margin: 63px 0 0 0;
+//   &:nth-child(even) {
+//     margin-left: 63px;
+//     margin-right: 31.5px;
+//   }
+//   &:nth-child(odd) {
+//     margin-right: 63px;
+//     margin-left: 31.5px;
+//   }
+// }
 }
 }
