--- a/themes/sgsc/style.css
+++ b/themes/sgsc/style.css
@@ -2641,8 +2641,12 @@ footer {
     margin: 0 22px; }
   .page-template-page-about-our-team span.text {
     color: #5c8edc; }
-  .page-template-page-about-our-team .member-email, .page-template-page-about-our-team .member-bio, .page-template-page-about-our-team .member-container {
+  .page-template-page-about-our-team .cfs-hyperlink {
+    text-decoration: none; }
+  .page-template-page-about-our-team .member-email, .page-template-page-about-our-team .member-bio {
     margin-bottom: 20px; }
+  .page-template-page-about-our-team .member-picture {
+    width: 100%; }
   .page-template-page-about-our-team .about-back-btn p {
     border: solid 2px black;
     width: 6rem;
@@ -2671,26 +2675,7 @@ footer {
       display: -ms-flexbox;
       display: flex;
       -ms-flex-wrap: wrap;
-          flex-wrap: wrap; }
-    .page-template-page-about-our-team .about-links p {
-      background: #f5a623;
-      width: 417px;
-      height: 150px;
-      border: 4px solid #f5a623;
-      text-align: center;
-      display: -ms-flexbox;
-      display: flex;
-      -ms-flex-pack: center;
-          justify-content: center;
-      -ms-flex-align: center;
-          align-items: center;
-      margin: 63px 0 0 0; }
-      .page-template-page-about-our-team .about-links p:nth-child(even) {
-        margin-left: 63px;
-        margin-right: 31.5px; }
-      .page-template-page-about-our-team .about-links p:nth-child(odd) {
-        margin-right: 63px;
-        margin-left: 31.5px; } }
+          flex-wrap: wrap; } }
 
 .program-hero {
   height: 19rem;
