started styling on our team page for desktop

--- a/themes/sgsc/sass/_about-our-team.scss
+++ b/themes/sgsc/sass/_about-our-team.scss
@@ -126,14 +126,13 @@ span.text {
 
 @media all and (min-width: 480px) {
 
-.page-template-page-about-our-team {
-
+.entry-content {
+  column-count: 2;
 }
 
-.about-links {
-  display: flex;
-  flex-wrap: wrap;
-}
+// .page-template-page-about-our-team {
+
+// }
 
 // .entry-content a {
 //   color: $black;
