--- a/themes/sgsc/sass/_single-gallery.scss
+++ b/themes/sgsc/sass/_single-gallery.scss
@@ -1,91 +1,93 @@
-  /*--------------------------------------------------------------
+/*--------------------------------------------------------------
 # Single-Gallery Page
 --------------------------------------------------------------*/
-  
-  .single-gallery .content-area {
+
+.single-gallery .content-area {
+  display: flex;
+  justify-content: center;
+  .site-main {
+    width: 100%;
+    @media screen and (min-width: $mobile_width) {
+      width: $d_width;
+    }
     display: flex;
+    flex-flow: column nowrap;
+    article {
+      margin: 0;
+    }
+  }
+}
+
+.single-gallery .entry-header {
+  @include page-header;
+  img {
+    display: none;
+  }
+  @include m-donate;
+  .entry-meta {
+    display: none;
+  }
+}
+
+.single-gallery .entry-content {
+  width: 100%;
+  .gallery {
+    display: flex;
+    flex-flow: column wrap;
     justify-content: center;
-    .site-main {
-      width: 100%;
-      @media screen and (min-width: $mobile_width) {
-        width: $d_width;
-      }
+    align-items: center;
+    @include m-button;
+    @media screen and (min-width: $mobile_width) {
+      justify-content: space-between;
+      flex-flow: row wrap;
+      margin-bottom: 0;
+    }
+    .thumbnail {
       display: flex;
-      flex-flow: column nowrap;
-      article {
-        margin: 0;
-        .entry-header {
-          @include page-header;
-          img {
-            display: none;
-          }
-          @include m-donate;
-          .entry-meta {
-            display: none;
-          }
-        }
-        .entry-content {
-          width: 100%;
-          .gallery {
-            display: flex;
-            flex-flow: column wrap;
-            justify-content: center;
-            align-items: center;
-            @media screen and (min-width: $mobile_width) {
-              justify-content: space-between;
-              flex-flow: row wrap;
-              margin-bottom: 0;
-            }
-            .thumbnail {
-              display: flex;
-              margin: 0;
-              padding: 0;
-              height: 208px;
-              min-width: 100%;
-              max-width: none;
-              margin-top: 10px;
-              position: relative;
-              overflow: hidden;
-              @media screen and (min-width: $mobile_width) {
-                width: 48%;
-                height: 321px;
-                min-width: initial;
-                margin-bottom: 32px;
-              }
-              img {
-                min-height: 100%;
-                max-height: 100%;
-                width: auto;
-                object-fit: cover;
-                min-width: 100%;
-                left: 50%;
-                top: 70%;
-                transform: translate(-50%, -70%);
-                max-width: none;
-                position: absolute;
-              }
-            }
-          }
-          h1,
-          h2,
-          h3,
-          h4,
-          h5,
-          h6,
-          p,
-          form {
-            display: none;
-          }
-        }
+      margin: 0;
+      padding: 0;
+      height: 208px;
+      min-width: 100%;
+      max-width: none;
+      margin-top: 10px;
+      position: relative;
+      overflow: hidden;
+      @media screen and (min-width: $mobile_width) {
+        width: 48%;
+        height: 321px;
+        min-width: initial;
+        margin-bottom: 32px;
       }
-      @include m-button;
-      .m-button {
-        display: inline-block;
-        p {
-          @media screen and (min-width: $mobile_width) {
-            padding: 0rem 1.5rem;
-          }
-        }
+      img {
+        min-height: 100%;
+        max-height: 100%;
+        width: auto;
+        object-fit: cover;
+        min-width: 100%;
+        left: 50%;
+        top: 70%;
+        transform: translate(-50%, -70%);
+        max-width: none;
+        position: absolute;
       }
     }
   }
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6,
+  p,
+  form {
+    display: none;
+  }
+  .m-button {
+    display: inline-block;
+    p {
+      @media screen and (min-width: $mobile_width) {
+        padding: 0rem 1.5rem;
+      }
+    }
+  }
+}
