touchups on desktop our team view

--- a/themes/sgsc/sass/_about-our-team.scss
+++ b/themes/sgsc/sass/_about-our-team.scss
@@ -179,4 +179,12 @@ ul li:nth-child(odd) img {
 ul li:nth-child(even) img {
   padding-right: 38px;
 }
+
+.member-picture {
+  height: auto;
+  max-width: 100%;
+  margin-bottom: 20px;
+  margin-top: 40px;
 }
+}
+
