--- a/themes/sgsc/style.css
+++ b/themes/sgsc/style.css
@@ -3,7 +3,7 @@ Theme Name: South Granville Senior Center
 Theme URI: http://underscores.me/
 Author: Kat Soberg, Brian Lau, Eric Liddle
 Author URI: http://www.southgranvilleseniors.ca
-Description: A WordPress theme for South Granvillge Senior Center.
+Description: A WordPress theme for South Granville Senior Center.
 Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
